tests/ui/inference/ambiguous-cast-suggestion-issue-41261.stderr
error[E0282]: type annotations needed for `&mut (_, _)`
  --> $DIR/ambiguous-cast-suggestion-issue-41261.rs:12:37
   |
LL |         self.v.get_mut(i as _).map(|&mut (_, ref mut v2)| {
   |                                     ^^^^^^^^^^^^^^^^^^^^
LL |
LL |             v2.drain(..)
   |             -- type must be known at this point
   |
help: consider giving this closure parameter an explicit type, where the placeholders `_` are specified
   |
LL |         self.v.get_mut(i as _).map(|&mut (_, ref mut v2): &mut (_, _)| {
   |                                                         +++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
